cluster/talos/apps/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    goldilocks.fairwinds.com/enabled: "true"
