cluster/talos/apps/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  namespace: adguard-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: adguard-home-http
      port:
        number: 80
  tls:
  - hosts:
    - adguard-home
